13/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'CREATE'", "'TABLE'", "'SERIAL'", 
                     "'PRIMARY'", "'KEY'", "'VARCHAR'", "'INTEGER'", "'NOT'", 
                     "'NULL'", "'DATE'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'SELECT'", "'FROM'", "'WHERE'", "'INNER'", "'JOIN'", 
                     "'ON'", "<INVALID>", "'('", "')'", "','", "'.'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "CREATE", "TABLE", "SERIAL", 
                      "PRIMARY", "KEY", "VARCHAR", "INTEGER", "NOT", "NULL", 
                      "DATE", "INSERT", "INTO", "VALUES", "SELECT", "FROM", 
                      "WHERE", "INNER", "JOIN", "ON", "COMPARACION", "PAR_IZQ", 
                      "PAR_DER", "COMA", "PUNTO", "PUNTO_COMA", "ID", "NUM", 
                      "CADENA", "WS" ]

    RULE_root = 0
    RULE_statement = 1
    RULE_createTableStmt = 2
    RULE_tableName = 3
    RULE_columnDef = 4
    RULE_columnName = 5
    RULE_dataType = 6
    RULE_columnConstraint = 7
    RULE_insertStmt = 8
    RULE_valueList = 9
    RULE_value = 10
    RULE_selectStmt = 11
    RULE_selectColumns = 12
    RULE_selectColumn = 13
    RULE_fromClause = 14
    RULE_tableRef = 15
    RULE_joinCondition = 16
    RULE_whereCondition = 17
    RULE_expr = 18
    RULE_tableAlias = 19

    ruleNames =  [ "root", "statement", "createTableStmt", "tableName", 
                   "columnDef", "columnName", "dataType", "columnConstraint", 
                   "insertStmt", "valueList", "value", "selectStmt", "selectColumns", 
                   "selectColumn", "fromClause", "tableRef", "joinCondition", 
                   "whereCondition", "expr", "tableAlias" ]

    EOF = Token.EOF
    T__0=1
    CREATE=2
    TABLE=3
    SERIAL=4
    PRIMARY=5
    KEY=6
    VARCHAR=7
    INTEGER=8
    NOT=9
    NULL=10
    DATE=11
    INSERT=12
    INTO=13
    VALUES=14
    SELECT=15
    FROM=16
    WHERE=17
    INNER=18
    JOIN=19
    ON=20
    COMPARACION=21
    PAR_IZQ=22
    PAR_DER=23
    COMA=24
    PUNTO=25
    PUNTO_COMA=26
    ID=27
    NUM=28
    CADENA=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLParser.StatementContext,i)


        def PUNTO_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.PUNTO_COMA)
            else:
                return self.getToken(SQLParser.PUNTO_COMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = SQLParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36868) != 0):
                self.state = 40
                self.statement()
                self.state = 41
                self.match(SQLParser.PUNTO_COMA)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createTableStmt(self):
            return self.getTypedRuleContext(SQLParser.CreateTableStmtContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(SQLParser.InsertStmtContext,0)


        def selectStmt(self):
            return self.getTypedRuleContext(SQLParser.SelectStmtContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.createTableStmt()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.insertStmt()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.selectStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SQLParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(SQLParser.TABLE, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def PAR_IZQ(self):
            return self.getToken(SQLParser.PAR_IZQ, 0)

        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(SQLParser.ColumnDefContext,i)


        def PAR_DER(self):
            return self.getToken(SQLParser.PAR_DER, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMA)
            else:
                return self.getToken(SQLParser.COMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_createTableStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTableStmt" ):
                listener.enterCreateTableStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTableStmt" ):
                listener.exitCreateTableStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateTableStmt" ):
                return visitor.visitCreateTableStmt(self)
            else:
                return visitor.visitChildren(self)




    def createTableStmt(self):

        localctx = SQLParser.CreateTableStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createTableStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(SQLParser.CREATE)
            self.state = 54
            self.match(SQLParser.TABLE)
            self.state = 55
            self.tableName()
            self.state = 56
            self.match(SQLParser.PAR_IZQ)
            self.state = 57
            self.columnDef()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 58
                self.match(SQLParser.COMA)
                self.state = 59
                self.columnDef()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(SQLParser.PAR_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SQLParser.ID, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_tableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableName" ):
                listener.enterTableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableName" ):
                listener.exitTableName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableName" ):
                return visitor.visitTableName(self)
            else:
                return visitor.visitChildren(self)




    def tableName(self):

        localctx = SQLParser.TableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tableName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(SQLParser.ColumnNameContext,0)


        def dataType(self):
            return self.getTypedRuleContext(SQLParser.DataTypeContext,0)


        def columnConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ColumnConstraintContext)
            else:
                return self.getTypedRuleContext(SQLParser.ColumnConstraintContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_columnDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDef" ):
                listener.enterColumnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDef" ):
                listener.exitColumnDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDef" ):
                return visitor.visitColumnDef(self)
            else:
                return visitor.visitChildren(self)




    def columnDef(self):

        localctx = SQLParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_columnDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.columnName()
            self.state = 70
            self.dataType()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==9:
                self.state = 71
                self.columnConstraint()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SQLParser.ID, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_columnName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnName" ):
                listener.enterColumnName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnName" ):
                listener.exitColumnName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnName" ):
                return visitor.visitColumnName(self)
            else:
                return visitor.visitChildren(self)




    def columnName(self):

        localctx = SQLParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_columnName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(SQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SERIAL(self):
            return self.getToken(SQLParser.SERIAL, 0)

        def INTEGER(self):
            return self.getToken(SQLParser.INTEGER, 0)

        def VARCHAR(self):
            return self.getToken(SQLParser.VARCHAR, 0)

        def PAR_IZQ(self):
            return self.getToken(SQLParser.PAR_IZQ, 0)

        def NUM(self):
            return self.getToken(SQLParser.NUM, 0)

        def PAR_DER(self):
            return self.getToken(SQLParser.PAR_DER, 0)

        def DATE(self):
            return self.getToken(SQLParser.DATE, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataType" ):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = SQLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataType)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(SQLParser.SERIAL)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(SQLParser.INTEGER)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.match(SQLParser.VARCHAR)
                self.state = 82
                self.match(SQLParser.PAR_IZQ)
                self.state = 83
                self.match(SQLParser.NUM)
                self.state = 84
                self.match(SQLParser.PAR_DER)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.match(SQLParser.DATE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMARY(self):
            return self.getToken(SQLParser.PRIMARY, 0)

        def KEY(self):
            return self.getToken(SQLParser.KEY, 0)

        def NOT(self):
            return self.getToken(SQLParser.NOT, 0)

        def NULL(self):
            return self.getToken(SQLParser.NULL, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_columnConstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnConstraint" ):
                listener.enterColumnConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnConstraint" ):
                listener.exitColumnConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnConstraint" ):
                return visitor.visitColumnConstraint(self)
            else:
                return visitor.visitChildren(self)




    def columnConstraint(self):

        localctx = SQLParser.ColumnConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnConstraint)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(SQLParser.PRIMARY)
                self.state = 89
                self.match(SQLParser.KEY)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(SQLParser.NOT)
                self.state = 91
                self.match(SQLParser.NULL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(SQLParser.INSERT, 0)

        def INTO(self):
            return self.getToken(SQLParser.INTO, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def PAR_IZQ(self):
            return self.getToken(SQLParser.PAR_IZQ, 0)

        def columnName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ColumnNameContext)
            else:
                return self.getTypedRuleContext(SQLParser.ColumnNameContext,i)


        def PAR_DER(self):
            return self.getToken(SQLParser.PAR_DER, 0)

        def VALUES(self):
            return self.getToken(SQLParser.VALUES, 0)

        def valueList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ValueListContext)
            else:
                return self.getTypedRuleContext(SQLParser.ValueListContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMA)
            else:
                return self.getToken(SQLParser.COMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_insertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmt" ):
                listener.enterInsertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmt" ):
                listener.exitInsertStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStmt" ):
                return visitor.visitInsertStmt(self)
            else:
                return visitor.visitChildren(self)




    def insertStmt(self):

        localctx = SQLParser.InsertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_insertStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SQLParser.INSERT)
            self.state = 95
            self.match(SQLParser.INTO)
            self.state = 96
            self.tableName()
            self.state = 97
            self.match(SQLParser.PAR_IZQ)
            self.state = 98
            self.columnName()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 99
                self.match(SQLParser.COMA)
                self.state = 100
                self.columnName()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(SQLParser.PAR_DER)
            self.state = 107
            self.match(SQLParser.VALUES)
            self.state = 108
            self.valueList()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 109
                self.match(SQLParser.COMA)
                self.state = 110
                self.valueList()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAR_IZQ(self):
            return self.getToken(SQLParser.PAR_IZQ, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ValueContext)
            else:
                return self.getTypedRuleContext(SQLParser.ValueContext,i)


        def PAR_DER(self):
            return self.getToken(SQLParser.PAR_DER, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMA)
            else:
                return self.getToken(SQLParser.COMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueList" ):
                return visitor.visitValueList(self)
            else:
                return visitor.visitChildren(self)




    def valueList(self):

        localctx = SQLParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SQLParser.PAR_IZQ)
            self.state = 117
            self.value()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 118
                self.match(SQLParser.COMA)
                self.state = 119
                self.value()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(SQLParser.PAR_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(SQLParser.NUM, 0)

        def CADENA(self):
            return self.getToken(SQLParser.CADENA, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = SQLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not(_la==28 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SQLParser.SELECT, 0)

        def selectColumns(self):
            return self.getTypedRuleContext(SQLParser.SelectColumnsContext,0)


        def FROM(self):
            return self.getToken(SQLParser.FROM, 0)

        def fromClause(self):
            return self.getTypedRuleContext(SQLParser.FromClauseContext,0)


        def WHERE(self):
            return self.getToken(SQLParser.WHERE, 0)

        def whereCondition(self):
            return self.getTypedRuleContext(SQLParser.WhereConditionContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_selectStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmt" ):
                listener.enterSelectStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmt" ):
                listener.exitSelectStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmt" ):
                return visitor.visitSelectStmt(self)
            else:
                return visitor.visitChildren(self)




    def selectStmt(self):

        localctx = SQLParser.SelectStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_selectStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(SQLParser.SELECT)
            self.state = 130
            self.selectColumns()
            self.state = 131
            self.match(SQLParser.FROM)
            self.state = 132
            self.fromClause()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 133
                self.match(SQLParser.WHERE)
                self.state = 134
                self.whereCondition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectColumnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectColumn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.SelectColumnContext)
            else:
                return self.getTypedRuleContext(SQLParser.SelectColumnContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMA)
            else:
                return self.getToken(SQLParser.COMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_selectColumns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectColumns" ):
                listener.enterSelectColumns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectColumns" ):
                listener.exitSelectColumns(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectColumns" ):
                return visitor.visitSelectColumns(self)
            else:
                return visitor.visitChildren(self)




    def selectColumns(self):

        localctx = SQLParser.SelectColumnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_selectColumns)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.selectColumn()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 138
                self.match(SQLParser.COMA)
                self.state = 139
                self.selectColumn()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableAlias(self):
            return self.getTypedRuleContext(SQLParser.TableAliasContext,0)


        def PUNTO(self):
            return self.getToken(SQLParser.PUNTO, 0)

        def columnName(self):
            return self.getTypedRuleContext(SQLParser.ColumnNameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_selectColumn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectColumn" ):
                listener.enterSelectColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectColumn" ):
                listener.exitSelectColumn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectColumn" ):
                return visitor.visitSelectColumn(self)
            else:
                return visitor.visitChildren(self)




    def selectColumn(self):

        localctx = SQLParser.SelectColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_selectColumn)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.tableAlias()
                self.state = 146
                self.match(SQLParser.PUNTO)
                self.state = 147
                self.columnName()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.columnName()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.TableRefContext)
            else:
                return self.getTypedRuleContext(SQLParser.TableRefContext,i)


        def INNER(self):
            return self.getToken(SQLParser.INNER, 0)

        def JOIN(self):
            return self.getToken(SQLParser.JOIN, 0)

        def ON(self):
            return self.getToken(SQLParser.ON, 0)
